Update Solution.java